Bug 661348 - When adobe flash warning is on what's new page, links are misaligned
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@89783 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/firefox/3.6/firstrun-page.css
+++ b/style/firefox/3.6/firstrun-page.css
@@ -775,9 +775,8 @@ h2 {
 	font-style: italic;
 	text-align: right;
 	font-size: 14px;
-	position: absolute;
-	right: 0;
-	top: 590px;
+    float: right;
+    clear: both;
 }
 
 #whatsnew #sub-links a {
